--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -9,10 +9,15 @@ html{
 
 
 body{
+  background: #f2f2f2;
   color: #555555;
   font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.6rem;
 }
 
+input, button, select{
+  font-size: 1.3rem;
+}
 
 h1{
   font-weight: 300;
@@ -22,3 +27,7 @@ h1{
 
 @import "./components/titleBar";
 @import './components/wrapper';
+@import './components/item';
+@import './components/button';
+@import './components/form';
+@import './components/player';
